# cpp_arcade

./: CMakeLists.txt  Makefile  README  arcade  test.cpp
games/centipede/: centipede.cpp
games/nibbler/: nibbler.cpp
games/pacman/: pacman.cpp
games/pacman/resources/maps/: test_map
games/qix/: qix.cpp
games/solarfox/: solarfox.cpp
include/: centipede.hpp  handler.hpp  ncurses.hpp  nibbler.hpp  pacman.hpp  qix.hpp  sdl.hpp  sfml.hpp  solarfox.hpp
lib/interfaces/: IGameLibrary.hpp  IGraphicalLibrary.hpp
lib/ncurses/: ncurses.cpp
lib/sdl/: sdl.cpp
lib/sfml/: sfml.cpp
src/: handler.cpp  main.cpp
